change api behavior for login and user profile